--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li>Gold: 7-9 points</li>
                 <li>Platinum: 10+ points</li>
             </ul>
+            <small>By Nicole Ling, Zhaleh Sojoodi and Will Fenn.</small>
         </div>
     </div>
     <script src="./game.js"></script>
